# CMake-Jenkins-CPP

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  build.bat  build.groovy  build.sh  run.bat  run.sh  vcpkg.json
cmake/Toolchain/: x64-ARM-Linux.cmake  x86-32-Windows.cmake  x86-64-macOS.cmake
include/Library.Shared/: Num.hpp
source/: CMakeLists.txt
source/App/: App.cpp  CMakeLists.txt
source/Library.Shared/: CMakeLists.txt  Num.cpp
