add_executable(app App.cpp)
target_compile_features(app PRIVATE cxx_std_17)
# we can use find_package() command as we have set up vcpkg correctly earlier.
find_package(glfw3 3.3.1 REQUIRED)
if(APPLE)
    target_link_libraries(app PRIVATE glfw Library.Shared "-framework OpenGL")
elseif(UNIX AND NOT APPLE)
    find_package(glew REQUIRED)
    target_link_libraries(app PRIVATE glfw Library.Shared GLEW::GLEW)
else()
    find_package(OpenGL REQUIRED)
    target_link_libraries(app PRIVATE glfw Library.Shared OpenGL::GL)
endif()